--- a/lottie-framer-demo.framer/.social.html
+++ b/lottie-framer-demo.framer/.social.html
@@ -31,14 +31,14 @@
 		<script src="framer/framer.js?nocache=de1b3b046cd7a44d11f275a7634f9e0b"></script>
 		<script src="framer/framer.generated.js?nocache=27d512ed46dba8aab8cfcccbfd23d274"></script>
 		<script src="framer/framer.modules.js?nocache=a48a3f6cb3e45983bd94201f7185633e"></script>
-		<script>document.addEventListener("DOMContentLoaded", function() {window.__framerClientCodeId = 896;window.__framerNew = function (n,loc,th,i){if (i == null) { return i };i.__framerInstanceInfo = _.defaults({name:n,location:loc,hash:th},i.__framerInstanceInfo);_.defaults(i.__framerInstanceInfo,{name:"Untitled"});return i;};window.__framerAnimation = function (th,a){if (a.isNoop === true) {return a;};var l = a.layer;if (l == null) { return a; };if (l.__framerAnimationInfo == null) {l.__framerAnimationInfo = {};};l.__framerAnimationInfo[th] = {originalState:a._originalState, destinationProperties: a.properties, destinationOptions: a.options};return a;};(function() {
-  var buttonPause, buttonPlay, lf, lottieLogoAnimation, styles;
+		<script>document.addEventListener("DOMContentLoaded", function() {window.__framerClientCodeId = 428;window.__framerNew = function (n,loc,th,i){if (i == null) { return i };i.__framerInstanceInfo = _.defaults({name:n,location:loc,hash:th},i.__framerInstanceInfo);_.defaults(i.__framerInstanceInfo,{name:"Untitled"});return i;};window.__framerAnimation = function (th,a){if (a.isNoop === true) {return a;};var l = a.layer;if (l == null) { return a; };if (l.__framerAnimationInfo == null) {l.__framerAnimationInfo = {};};l.__framerAnimationInfo[th] = {originalState:a._originalState, destinationProperties: a.properties, destinationOptions: a.options};return a;};(function() {
+  var buttonPlay, isPlaying, lf, lottieLogoAnimation, welcomeText;
 
   Screen.backgroundColor = "#FFF";
 
   lf = require('lottieLayer');
 
-  lottieLogoAnimation = window.__framerNew("lottieLogoAnimation", "5:26-12:0", "?",new lf({
+  lottieLogoAnimation = window.__framerNew("lottieLogoAnimation", "5:26-11:0", "?",new lf({
     jsonPath: 'data.json',
     autoplay: false,
     looping: true,
@@ -46,65 +46,64 @@
     height: Screen.height
   }));
 
-  styles = {
+  welcomeText = window.__framerNew("welcomeText", "12:18-17:0", "#1498a19a4",new Layer({
+    y: 350,
+    width: Screen.width,
+    backgroundColor: 'transparent',
+    html: "<p>WELCOME</p><p>TO</p><p>LOTTIE</p>"
+  }));
+
+  welcomeText.style = {
     "color": "#00D1C1",
     "text-align": "center",
-    "font-size": "35px",
-    "line-height": "93px"
+    "font-size": "66px",
+    "line-height": "80px",
+    "font-family": "Avenir Light,Georgia,serif",
+    "font-style": "italic",
+    "letter-spacing": "5px"
   };
 
-  buttonPlay = window.__framerNew("buttonPlay", "19:17-30:0", "#120a43c3c",new Layer({
+  buttonPlay = window.__framerNew("buttonPlay", "27:17-38:0", "#e526517f",new Layer({
     y: 981,
-    x: 30,
+    x: 150,
     height: 93,
-    width: 270,
+    width: 340,
     borderRadius: 6,
     backgroundColor: "#00D1C1",
     html: "PLAY",
     shadowSpread: 15,
     shadowBlur: 50,
-    shadowColor: "rgba(0,0,0,0.1)"
+    shadowColor: "rgba(0,0,0,0.05)"
   }));
 
-  buttonPause = window.__framerNew("buttonPause", "31:18-44:0", "#10a31cac7",new Layer({
-    y: 981,
-    x: 340,
-    height: 93,
-    width: 270,
-    borderRadius: 6,
-    backgroundColor: "#FFF",
-    borderWidth: 2,
-    borderColor: "#00D1C1",
-    html: "PAUSE",
-    shadowSpread: 10,
-    shadowBlur: 40,
-    shadowColor: "rgba(0,0,0,0.1)"
-  }));
+  buttonPlay.style = {
+    "color": "#FFF",
+    "text-align": "center",
+    "font-size": "35px",
+    "line-height": "93px"
+  };
 
-  buttonPlay.style = styles;
-
-  buttonPause.style = styles;
-
-  buttonPlay.style["color"] = "#FFF";
+  isPlaying = false;
 
   buttonPlay.onClick(function() {
-    lottieLogoAnimation.play();
-    window.__framerAnimation("#14665ced8",buttonPlay.animate({
-      opacity: 0.6
-    }));
-    return window.__framerAnimation("#b032455a",buttonPause.animate({
-      opacity: 1
-    }));
-  });
-
-  buttonPause.onClick(function() {
-    lottieLogoAnimation.pause();
-    window.__framerAnimation("#b8b16d9f",buttonPause.animate({
-      opacity: 0.6
-    }));
-    return window.__framerAnimation("#17960c076",buttonPlay.animate({
-      opacity: 1
-    }));
+    if (isPlaying) {
+      lottieLogoAnimation.pause();
+      isPlaying = false;
+      buttonPlay.html = "PLAY";
+      return window.__framerAnimation("#14673e659",buttonPlay.animate({
+        opacity: 1
+      }));
+    } else {
+      lottieLogoAnimation.play();
+      isPlaying = true;
+      buttonPlay.html = "PAUSE";
+      window.__framerAnimation("#83d949df",buttonPlay.animate({
+        opacity: 0.5
+      }));
+      return window.__framerAnimation("#eda5c061",welcomeText.animate({
+        opacity: 0
+      }));
+    }
   });
 
 }).call(this);
